--- a/css/myCss.css
+++ b/css/myCss.css
@@ -66,7 +66,7 @@ section img{ position: fixed; z-index: -5;height: 100vh; width: 100%; }
 .buttons button{border: 0; font-size: 20px; font-weight: 700; padding: 15px 22px; background-color: #fff; border-radius: 5px; }
 .buttons button:nth-of-type(2){color:#fff; background-color: var(--kirmizi); border-radius: 5px; margin-left: 30px; }
 .buttons button:hover{cursor: pointer;}
-.projectsPrev{ display: flex; justify-content: space-between; flex-wrap: wrap; }
+.projectsPrev{ display: flex; justify-content: center; flex-wrap: wrap; gap:30px;}
 .projectsPrev .projectView{ width: calc(50% - 15px); margin-bottom: 30px;  }
 .projectsPrev .projectView .projectImage{ border: 2px solid #fff;overflow: hidden; }
 .projectsPrev .projectView .projectImage img{ width: 100%; transition: ease-in-out 0.6s all;}
